# finite-state-machine

./: .gitignore  CMakeLists.txt  README.md
FiniteStateMachine/: CMakeLists.txt
FiniteStateMachine/include/: FiniteStateMachine.h
FiniteStateMachine/src/: CMakeLists.txt  FiniteStateMachine.c
Motor/: CMakeLists.txt
Motor/include/: DataTypes.h  Motor.h
Motor/src/: CMakeLists.txt  Motor.c
include/: DataTypes.h  FiniteStateMachine.h  Motor.h
src/: FiniteStateMachine.c  Motor.c  main.c
